// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markup > should render 'admonition.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Alert variant="note"><Markdown.Paragraph>Useful information that users should know.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="tip"><Markdown.Paragraph>Helpful advice for doing things better.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="important"><Markdown.Paragraph>Key information users need to know.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="warning" title="Heads up"><Markdown.Paragraph>A custom title can follow the variant on the opening line.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="caution"><Markdown.Paragraph>Risky action ahead.</Markdown.Paragraph>
<Markdown.Space />
<Markdown.Paragraph>Body can span multiple paragraphs.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="info"><Markdown.Paragraph>Extra variant beyond GFM.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="success"><Markdown.Paragraph>The operation completed successfully.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Alert variant="danger" title="Heads up"><Markdown.Paragraph>Destructive action ahead.</Markdown.Paragraph>
</Markdown.Alert>
",
}
`;

exports[`markup > should render 'alert.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Alert variant="note"><Markdown.Paragraph>Useful information that users should know, even when skimming content.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="tip"><Markdown.Paragraph>Helpful advice for doing things better or more easily.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="important"><Markdown.Paragraph>Key information users need to know to achieve their goal.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="warning"><Markdown.Paragraph>Urgent info that needs immediate user attention to avoid problems.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="caution"><Markdown.Paragraph>Advises about risks or negative outcomes of certain actions.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="info"><Markdown.Paragraph>Extra variant beyond GFM.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="success"><Markdown.Paragraph>The operation completed successfully.</Markdown.Paragraph>
</Markdown.Alert>
<Markdown.Space />
<Markdown.Alert variant="danger"><Markdown.Paragraph>Destructive action ahead.</Markdown.Paragraph>
</Markdown.Alert>
",
}
`;

exports[`markup > should render 'code-block.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Code lang="ts" code={\`const foo = 'bar';\`} multiline />
",
}
`;

exports[`markup > should render 'code-block-curly-braces.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Code lang="ts" code={\`const name = 'world';
const message = \\\`Hello $\\{name\\}!\\\`;\`} multiline />
",
}
`;

exports[`markup > should render 'h1.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Heading id="heading-1" level={1}>Heading 1</Markdown.Heading>
",
}
`;

exports[`markup > should render 'h2.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Heading id="heading-2" level={2}>Heading 2</Markdown.Heading>
",
}
`;

exports[`markup > should render 'h3.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Heading id="heading-3" level={2}>Heading 3</Markdown.Heading>
",
}
`;

exports[`markup > should render 'h4.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Heading id="heading-4" level={2}>Heading 4</Markdown.Heading>
",
}
`;

exports[`markup > should render 'h5.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Heading id="heading-5" level={2}>Heading 5</Markdown.Heading>
",
}
`;

exports[`markup > should render 'h6.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Heading id="heading-6" level={2}>Heading 6</Markdown.Heading>
",
}
`;

exports[`markup > should render 'image.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is an image <Markdown.Image src="https://immich.app/"/>

This is an image with alt <Markdown.Image src="https://immich.app/" alt="alt text"/>

This is an image with alt and a title <Markdown.Image src="https://immich.app/," alt="alt text" title="title text"/>
</Markdown.Paragraph>
",
}
`;

exports[`markup > should render 'link.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is a <Markdown.Link href="https://immich.app/">link</Markdown.Link></Markdown.Paragraph>
",
}
`;

exports[`markup > should render 'link-shothand.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is a shorthand link: <Markdown.Link href="https://immich.app/">https://immich.app/</Markdown.Link></Markdown.Paragraph>
",
}
`;

exports[`markup > should render 'list.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.List ordered>
<Markdown.ListItem>First item</Markdown.ListItem>
<Markdown.ListItem>Second item</Markdown.ListItem>
<Markdown.ListItem>Third item</Markdown.ListItem>
</Markdown.List>
",
}
`;

exports[`markup > should render 'snippets.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
{#snippet postScript()}<Markdown.Space />
<Markdown.Paragraph>This should work</Markdown.Paragraph>
<Markdown.Space />
{/snippet}",
}
`;

exports[`markup > should render 'text-bold.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is <strong>bold</strong> text.</Markdown.Paragraph>
",
}
`;

exports[`markup > should render 'text-code.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is <Markdown.Code code={\`code\`} /> text.</Markdown.Paragraph>
",
}
`;

exports[`markup > should render 'text-italic.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is <em>italic</em> text.</Markdown.Paragraph>
",
}
`;

exports[`markup > should render 'text-strike-through.md' correctly 1`] = `
{
  "code": "<script>
  import { Markdown } from '@immich/ui';
</script>
<Markdown.Paragraph>This is <del>strike-through</del> text.</Markdown.Paragraph>
",
}
`;
